crates/emitter-client/tests/snapshots/snapshots__snapshot_multipart_paginated_custom_client.snap
---
source: crates/emitter-client/tests/snapshots.rs
expression: output
---
// Generated by oa-forge. Do not edit.

import type { uploadFileResponse, uploadFileBody, listItemsQueryParams, listItemsResponse, listCursoredQueryParams, listCursoredResponse, updateTextBody } from './types.gen';

import { customInstance } from '../custom-client';

type ArrayStyle = 'comma' | 'multi' | 'brackets';

function buildQuery(
  params?: Record<string, unknown>,
  arrayStyles?: Record<string, ArrayStyle>,
): string {
  if (!params) return '';
  const parts: string[] = [];
  for (const [key, value] of Object.entries(params)) {
    if (value === undefined) continue;
    if (Array.isArray(value)) {
      const style = arrayStyles?.[key] ?? 'multi';
      if (style === 'comma') {
        parts.push(`${encodeURIComponent(key)}=${value.map(v => encodeURIComponent(String(v))).join(',')}`);
      } else if (style === 'brackets') {
        for (const v of value) parts.push(`${encodeURIComponent(key + '[]')}=${encodeURIComponent(String(v))}`);
      } else {
        for (const v of value) parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(v))}`);
      }
    } else {
      parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(value))}`);
    }
  }
  return parts.length > 0 ? '?' + parts.join('&') : '';
}

export function uploadFile(body: uploadFileBody): Promise<uploadFileResponse> {
  return customInstance({ url: `/upload`, method: 'POST',
    data: (() => {
      const fd = new FormData();
      for (const [k, v] of Object.entries(body as Record<string, unknown>)) {
        if (v instanceof Blob) fd.append(k, v);
        else if (v !== undefined) fd.append(k, String(v));
      }
      return fd;
    })(),
  }) as Promise<uploadFileResponse>;
}

export function listItems(queryParams?: listItemsQueryParams): Promise<listItemsResponse> {
  return customInstance({ url: `/items${buildQuery(queryParams as Record<string, unknown>)}`, method: 'GET' }) as Promise<listItemsResponse>;
}

export function listCursored(queryParams?: listCursoredQueryParams): Promise<listCursoredResponse> {
  return customInstance({ url: `/cursored${buildQuery(queryParams as Record<string, unknown>)}`, method: 'GET' }) as Promise<listCursoredResponse>;
}

export function updateText(body: updateTextBody): Promise<void> {
  return customInstance({ url: `/text-upload`, method: 'PUT',
    headers: { 'Content-Type': 'text/plain' },
    data: String(body),
  }) as Promise<void>;
}
