crates/emitter-client/tests/snapshots/snapshots__snapshot_petstore_client.snap
---
source: crates/emitter-client/tests/snapshots.rs
expression: output
---
// Generated by oa-forge. Do not edit.

import type { listPetsQueryParams, listPetsResponse, createPetResponse, createPetBody, getPetPathParams, getPetResponse, deletePetPathParams } from './types.gen';

export type RequestInterceptor = (url: string, init: RequestInit) => RequestInit | Promise<RequestInit>;
export type ResponseInterceptor = (response: Response) => Response | Promise<Response>;

export interface RequestConfig {
  baseUrl?: string;
  headers?: Record<string, string>;
  signal?: AbortSignal;
  /** Request timeout in milliseconds. Creates an AbortSignal that aborts after the specified duration. */
  timeout?: number;
  /** Custom fetch implementation (e.g. for testing or SSR). */
  fetch?: typeof fetch;
  /** Interceptors applied before sending the request. */
  onRequest?: RequestInterceptor | RequestInterceptor[];
  /** Interceptors applied after receiving the response. */
  onResponse?: ResponseInterceptor | ResponseInterceptor[];
}

export class ApiError<T = unknown> extends Error {
  status: number;
  body: T;
  constructor(status: number, body: T) {
    super(`HTTP ${status}`);
    this.name = 'ApiError';
    this.status = status;
    this.body = body;
  }
}

function resolveSignal(config?: RequestConfig): AbortSignal | undefined {
  if (!config) return undefined;
  const { signal, timeout } = config;
  if (!timeout) return signal;
  const timeoutSignal = AbortSignal.timeout(timeout);
  if (!signal) return timeoutSignal;
  return AbortSignal.any([signal, timeoutSignal]);
}

async function applyInterceptors<T>(
  value: T,
  interceptors?: ((v: T) => T | Promise<T>) | ((v: T) => T | Promise<T>)[],
): Promise<T> {
  if (!interceptors) return value;
  const fns = Array.isArray(interceptors) ? interceptors : [interceptors];
  let result = value;
  for (const fn of fns) result = await fn(result);
  return result;
}

async function fetchBase(
  url: string,
  init: RequestInit & { baseUrl?: string },
  config?: RequestConfig,
): Promise<Response> {
  const { baseUrl = '', ...rest } = init;
  const fullUrl = `${baseUrl}${url}`;
  const finalInit = await applyInterceptors(rest, config?.onRequest as any);
  const fetchFn = config?.fetch ?? fetch;
  let response = await fetchFn(fullUrl, finalInit);
  response = await applyInterceptors(response, config?.onResponse);
  if (!response.ok) {
    const body = await response.json().catch(() => undefined);
    throw new ApiError(response.status, body);
  }
  return response;
}

async function request<T>(url: string, init: RequestInit & { baseUrl?: string }, config?: RequestConfig): Promise<T> {
  const response = await fetchBase(url, init, config);
  return response.json();
}

type ArrayStyle = 'comma' | 'multi' | 'brackets';

function buildQuery(
  params?: Record<string, unknown>,
  arrayStyles?: Record<string, ArrayStyle>,
): string {
  if (!params) return '';
  const parts: string[] = [];
  for (const [key, value] of Object.entries(params)) {
    if (value === undefined) continue;
    if (Array.isArray(value)) {
      const style = arrayStyles?.[key] ?? 'multi';
      if (style === 'comma') {
        parts.push(`${encodeURIComponent(key)}=${value.map(v => encodeURIComponent(String(v))).join(',')}`);
      } else if (style === 'brackets') {
        for (const v of value) parts.push(`${encodeURIComponent(key + '[]')}=${encodeURIComponent(String(v))}`);
      } else {
        for (const v of value) parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(v))}`);
      }
    } else {
      parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(value))}`);
    }
  }
  return parts.length > 0 ? '?' + parts.join('&') : '';
}

export function listPets(queryParams?: listPetsQueryParams, config?: RequestConfig): Promise<listPetsResponse> {
  return request<listPetsResponse>(`${config?.baseUrl ?? ''}/pets${buildQuery(queryParams as Record<string, unknown>)}`, {
    method: 'GET',
    headers: config?.headers,
    signal: resolveSignal(config),
  }, config);
}

export function createPet(body: createPetBody, config?: RequestConfig): Promise<createPetResponse> {
  return request<createPetResponse>(`${config?.baseUrl ?? ''}/pets`, {
    method: 'POST',
    headers: { 'Content-Type': 'application/json', ...config?.headers },
    signal: resolveSignal(config),
    body: JSON.stringify(body),
  }, config);
}

export function getPet(pathParams: getPetPathParams, config?: RequestConfig): Promise<getPetResponse> {
  return request<getPetResponse>(`${config?.baseUrl ?? ''}/pets/${pathParams.petId}`, {
    method: 'GET',
    headers: config?.headers,
    signal: resolveSignal(config),
  }, config);
}

export function deletePet(pathParams: deletePetPathParams, config?: RequestConfig): Promise<void> {
  return fetchBase(`${config?.baseUrl ?? ''}/pets/${pathParams.petId}`, {
    method: 'DELETE',
    headers: config?.headers,
    signal: resolveSignal(config),
  }, config).then(() => {});
}
