crates/emitter-client/tests/snapshots/snapshots__snapshot_petstore_custom_client.snap
---
source: crates/emitter-client/tests/snapshots.rs
expression: output
---
// Generated by oa-forge. Do not edit.

import type { listPetsQueryParams, listPetsResponse, createPetResponse, createPetBody, getPetPathParams, getPetResponse, deletePetPathParams } from './types.gen';

export type CustomClient = (
  method: string,
  url: string,
  options?: {
    headers?: Record<string, string>;
    body?: unknown;
    signal?: AbortSignal;
  },
) => Promise<unknown>;

type ArrayStyle = 'comma' | 'multi' | 'brackets';

function buildQuery(
  params?: Record<string, unknown>,
  arrayStyles?: Record<string, ArrayStyle>,
): string {
  if (!params) return '';
  const parts: string[] = [];
  for (const [key, value] of Object.entries(params)) {
    if (value === undefined) continue;
    if (Array.isArray(value)) {
      const style = arrayStyles?.[key] ?? 'multi';
      if (style === 'comma') {
        parts.push(`${encodeURIComponent(key)}=${value.map(v => encodeURIComponent(String(v))).join(',')}`);
      } else if (style === 'brackets') {
        for (const v of value) parts.push(`${encodeURIComponent(key + '[]')}=${encodeURIComponent(String(v))}`);
      } else {
        for (const v of value) parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(v))}`);
      }
    } else {
      parts.push(`${encodeURIComponent(key)}=${encodeURIComponent(String(value))}`);
    }
  }
  return parts.length > 0 ? '?' + parts.join('&') : '';
}

export function listPets(client: CustomClient, queryParams?: listPetsQueryParams): Promise<listPetsResponse> {
  return client('GET', `/pets${buildQuery(queryParams as Record<string, unknown>)}`) as Promise<listPetsResponse>;
}

export function createPet(client: CustomClient, body: createPetBody): Promise<createPetResponse> {
  return client('POST', `/pets`, {
    headers: { 'Content-Type': 'application/json' },
    body: JSON.stringify(body),
  }) as Promise<createPetResponse>;
}

export function getPet(client: CustomClient, pathParams: getPetPathParams): Promise<getPetResponse> {
  return client('GET', `/pets/${pathParams.petId}`) as Promise<getPetResponse>;
}

export function deletePet(client: CustomClient, pathParams: deletePetPathParams): Promise<void> {
  return client('DELETE', `/pets/${pathParams.petId}`) as Promise<void>;
}
